# research_loom

./: .gitignore  CLI_ARGUMENTS.md  README.md  __init__.py  cli.py  pyproject.toml  pytest.ini  setup.py
config/: __init__.py  composer.py  schema.py
gates/: __init__.py  checks.py  runner.py
matrix/: __init__.py  executor.py  reporting.py
modeling/: __init__.py  artifact_resolver.py  contracts.py  result_builders.py  stats_fit.py  validators.py
output/: __init__.py  html_tables.py  html_theme.py
pipeline/: __init__.py  core.py  reporting.py
provenance/: __init__.py  capture.py
scripts/: __init__.py  run.py
studies/example_study/: README.md  study_pipeline.py  test_study.py
studies/example_study/config/: base.yaml  dev.yaml
tests/: REGRESSION_TESTING.md  conftest.py  lineage_example.py  run_all_tests.py  simple_artifact_demo.py  test_artifact_fixes.py  test_basic.py  test_basic_caching.py  test_cache_fix.py  test_comprehensive.py  test_config_changes.py  test_coverage_analysis.py  test_cox_data_config.py  test_downstream_propagation.py  test_example_study.py  test_no_execution_caching.py  test_optimization.py  test_reg_cli_behavior.py  test_reg_core_artifacts_matrix.py  test_reg_core_cache_keys_and_materialization.py  test_reg_core_export_and_provenance.py  test_reg_core_graph_and_planning.py  test_reg_core_invalidation.py  test_reg_example_study_regression.py  test_reg_modeling_shared_core.py  test_reg_output_tables.py  test_reg_pipeline_reporting.py  test_wire_format.py
